--- a/py-src/message_latency.ipynb
+++ b/py-src/message_latency.ipynb
@@ -31,8 +31,8 @@
     "@dataclass\n",
     "class Connection:\n",
     "    topic: str\n",
-    "    subscriber_node: str\n",
-    "    publisher_node: str\n",
+    "    source_node: str\n",
+    "    target_node: str\n",
     "\n",
     "    latencies: np.ndarray"
    ]
